sphinx_book_theme/static/sphinx-book-theme.css
/*********************************************
* Variables *
*********************************************/
/*********************************************
* Whole page *
*********************************************/
body {
  padding-top: 0px !important; }
  body img {
    max-width: 100%; }

code {
  font-size: 87.5% !important; }

/*********************************************
* Main body *
*********************************************/
@media (min-width: 1500px) {
  .col-xxl-7 {
    flex: 0 0 58.33333% !important;
    max-width: 58.33333% !important;
    position: relative !important;
    width: 100% !important;
    padding-right: 15px !important;
    padding-left: 15px !important; } }

@media (max-width: 1500px) {
  div.bd-sidebar.collapse:not(.show) + main.bd-content {
    flex: 0 0 100%;
    max-width: 100%; } }

main.bd-content {
  padding-top: 3.5em !important;
  padding-bottom: 0px !important; }
  main.bd-content.single-page {
    max-width: 1100px;
    margin-left: auto;
    margin-right: auto; }
    main.bd-content.single-page div#main-content div.section:first-of-type > h1:first-of-type {
      border-bottom: 1px solid #130654;
      padding-bottom: .2em;
      font-size: 3em; }
  main.bd-content #main-content a.headerlink {
    opacity: 0;
    margin-left: .2em; }
    main.bd-content #main-content a.headerlink:hover {
      background-color: transparent;
      color: #0071bc;
      opacity: 1 !important; }
  main.bd-content #main-content a, main.bd-content #main-content a:visited {
    color: #0071bc; }
  main.bd-content #main-content h1, main.bd-content #main-content h2, main.bd-content #main-content h3, main.bd-content #main-content h4, main.bd-content #main-content h5 {
    color: black; }
    main.bd-content #main-content h1:hover a.headerlink, main.bd-content #main-content h2:hover a.headerlink, main.bd-content #main-content h3:hover a.headerlink, main.bd-content #main-content h4:hover a.headerlink, main.bd-content #main-content h5:hover a.headerlink {
      opacity: .5; }
    main.bd-content #main-content h1 a.toc-backref, main.bd-content #main-content h2 a.toc-backref, main.bd-content #main-content h3 a.toc-backref, main.bd-content #main-content h4 a.toc-backref, main.bd-content #main-content h5 a.toc-backref {
      color: inherit; }
  main.bd-content #main-content div.section {
    padding-right: 1em;
    overflow: visible !important; }
    main.bd-content #main-content div.section ul p, main.bd-content #main-content div.section ol p {
      margin-bottom: 0; }
  main.bd-content #main-content span.eqno {
    float: right;
    margin: 1em 0em;
    font-size: 1.2em; }
  main.bd-content #main-content div.figure {
    width: 100%;
    margin-bottom: 1em;
    text-align: center; }
    main.bd-content #main-content div.figure.align-left {
      text-align: left; }
      main.bd-content #main-content div.figure.align-left p.caption {
        margin-left: 0; }
    main.bd-content #main-content div.figure.align-right {
      text-align: right; }
      main.bd-content #main-content div.figure.align-right p.caption {
        margin-right: 0; }
    main.bd-content #main-content div.figure p.caption {
      margin: .5em 10%; }
    main.bd-content #main-content div.figure.margin p.caption, main.bd-content #main-content div.figure.margin-caption p.caption {
      margin: .5em 0; }
    main.bd-content #main-content div.figure.margin-caption p.caption {
      text-align: left; }
    main.bd-content #main-content div.figure span.caption-number {
      font-weight: bold; }
    main.bd-content #main-content div.figure span {
      font-size: .9em; }
  main.bd-content #main-content div.alert {
    padding-bottom: .75em; }
    main.bd-content #main-content div.alert p.admonition-title {
      margin-bottom: .2em;
      font-size: 1.1em; }
      main.bd-content #main-content div.alert p.admonition-title::after {
        font-family: "FontAwesome";
        margin-left: 0.5em;
        content: "\f06a"; }
    main.bd-content #main-content div.alert.alert-warning p.admonition-title::after {
      content: "\f071";
      color: red; }
  main.bd-content #main-content dl.glossary dd {
    margin-left: 1.5em; }
  main.bd-content #main-content div.contents p.topic-title {
    font-size: 1.5em;
    padding: .5em 0 0 1em; }
  main.bd-content #main-content p.centered {
    text-align: center; }

div.cell div.cell_output {
  padding-right: 0; }

div.cell.tag_output_scroll div.cell_output {
  max-height: 24em;
  overflow-y: auto; }

div.sidebar, div.margin, div.margin-caption p.caption {
  width: 40%;
  float: right;
  border-left: 1px #a4a6a7 solid;
  margin-left: 0.5em;
  padding: .2em 0 .2em 1em; }
  div.sidebar p, div.margin p, div.margin-caption p.caption p {
    margin-bottom: 0; }
  div.sidebar p.sidebar-title, div.margin p.sidebar-title, div.margin-caption p.caption p.sidebar-title {
    font-weight: bold;
    font-size: 1.2em; }

@media (min-width: 768px) {
  div.cell.tag_popout, div.cell.tag_margin, div.margin, div.margin-caption p.caption {
    border: none;
    clear: right;
    width: 33% !important;
    margin: 0 -40% 0 0 !important;
    padding: 0 1em 0 0 !important;
    font-size: 0.9rem;
    line-height: 1.3;
    vertical-align: baseline;
    position: relative; }
    div.cell.tag_popout p, div.cell.tag_margin p, div.margin p, div.margin-caption p.caption p {
      margin-bottom: .5em; }
      div.cell.tag_popout p.sidebar-title, div.cell.tag_margin p.sidebar-title, div.margin p.sidebar-title, div.margin-caption p.caption p.sidebar-title {
        font-size: 1em; }
  div.cell.tag_margin .cell_output {
    padding-left: 0; } }

@media (min-width: 768px) {
  div.cell.tag_full-width, div.cell.tag_full_width, div.full_width, div.full-width {
    width: 134% !important; } }

blockquote {
  margin: 1em;
  padding: .2em 1.5em;
  border-left: 4px solid #ccc; }
  blockquote.pull-quote, blockquote.epigraph, blockquote.highlights {
    font-size: 1.25em;
    border-left: none; }
/* ... */

